--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.1.3",
     "typescript": "^4.4.2",
